@@ -25,12 +25,14 @@ class Images_examples extends CI_Controller {
 	function example1()
 	{
 		$this->load->library('Image_CRUD');
-		$photos_crud = new Image_CRUD();
+		$image_crud = new Image_CRUD();
 		
-		$photos_crud->set_table('example_1')
+		$image_crud->set_primary_key_field('id');
+		$image_crud->set_url_field('url');
+		$image_crud->set_table('example_1')
 			->set_image_path('assets/uploads');
 			
-		$output = $photos_crud->render();
+		$output = $image_crud->render();
 		
 		$this->_example_output($output);
 	}
@@ -38,13 +40,15 @@ class Images_examples extends CI_Controller {
 	function example2()
 	{
 		$this->load->library('Image_CRUD');
-		$photos_crud = new Image_CRUD();
+		$image_crud = new Image_CRUD();
 	
-		$photos_crud->set_table('example_2')
+		$image_crud->set_primary_key_field('id');
+		$image_crud->set_url_field('url');
+		$image_crud->set_table('example_2')
 		->set_ordering_field('priority')
 		->set_image_path('assets/uploads');
 			
-		$output = $photos_crud->render();
+		$output = $image_crud->render();
 	
 		$this->_example_output($output);
 	}
@@ -52,15 +56,16 @@ class Images_examples extends CI_Controller {
 	function example3()
 	{
 		$this->load->library('Image_CRUD');
-		$photos_crud = new Image_CRUD();
+		$image_crud = new Image_CRUD();
 	
-		$photos_crud->set_table('example_3')
+		$image_crud->set_primary_key_field('id');
+		$image_crud->set_url_field('url');
+		$image_crud->set_table('example_3')
 		->set_relation_field('category_id')
 		->set_ordering_field('priority')
-		->set_subject('Photo')
 		->set_image_path('assets/uploads');
 			
-		$output = $photos_crud->render();
+		$output = $image_crud->render();
 	
 		$this->_example_output($output);
 	}	
